[project]
name = "ati-audit"
version = "0.1.0"
description = "AI Trust Index auditor — open-source client-side CLI"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["pyyaml>=6", "httpx>=0.27", "cryptography>=42"]

[project.optional-dependencies]
pdf = ["pypdf>=4", "Pillow>=10", "pytesseract>=0.3"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
ati-audit = "ati_audit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
